fix word wrap of chat message field

--- a/client/css/chatRoom.css
+++ b/client/css/chatRoom.css
@@ -259,6 +259,7 @@ nav {
   border: 1px solid var(--lightPrimaryColor);
   padding: 10px;
   width: 80%;
+  word-wrap: break-word;
 }
 
 
